--- a/vbacGUI/src/製造管理システム (13).accdb/cls_BRAND_MASTER.cls
+++ b/vbacGUI/src/製造管理システム (13).accdb/cls_BRAND_MASTER.cls
@@ -269,3 +269,10 @@ Err_GetSystemDate:
 Exit_GetSystemDate:
     Set RsDate = Nothing
 End Property
+
+Public Property Let CursorLocation(inValue As ADODB.CursorLocationEnum)
+'3.0.0 ADD
+
+    cnADO.CursorLocation = inValue
+    
+End Property
